--- a/SharedForms/Resource1.resx
+++ b/SharedForms/Resource1.resx
@@ -148,6 +148,9 @@
   <data name="所有人24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\所有人24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="新消息" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\新消息.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="私" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\私.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
